# FiveCrowns

./: .gitignore  CMakeLists.txt
client/: main.cc
src/: CardSet.cc  CardSet.h  Game.h  Player.cc  Player.h  main.cc
tests/: CardSetTests.cc  PlayerTests.cc
